--- a/mB.Api/mB.Api.csproj
+++ b/mB.Api/mB.Api.csproj
@@ -5,11 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="10.3.3" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="NLog" Version="4.7.11" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\mB.Db\mB.Db.csproj" />
+    <ProjectReference Include="..\mB.Loader\mB.Loader.csproj" />
     <ProjectReference Include="..\mB.Utils\mB.Utils.csproj" />
   </ItemGroup>
 
