--- a/mB.Loader/mB.Loader.csproj
+++ b/mB.Loader/mB.Loader.csproj
@@ -1,13 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Ninject" Version="3.3.4" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\mB.Db\mB.Db.csproj" />
